# test_projet

./: .gitignore  Readme.md  app.py  debug_output.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py
conf/: config.yaml
conf/data/: default.yaml
conf/model/: random_forest.yaml  ridge.yaml  xgboost.yaml
data/: README.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerignore.txt  docker-compose.yml
frontend/src/: App.jsx  api.js  styles.css
notebooks/: 01_exploration.ipynb
src/senegal_rental_price/data/: preprocessing.py
src/senegal_rental_price/features/: build_features.py
src/senegal_rental_price/models/: predict.py  train.py
tests/: test_api.py  test_features.py  test_predict.py  test_preprocessing.py  test_train.py
