[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senegal-rental-price"
version = "0.1.0"
description = "Prédiction du prix des locations immobilières au Sénégal"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adama Gueye" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "hydra-core>=1.3",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "xgboost>=2.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[project.scripts]
senegal-rental-train = "senegal_rental_price.models.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pandas.*", "sklearn.*", "joblib.*", "xgboost.*", "mlflow.*", "hydra.*", "omegaconf.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src"]
extend-exclude = ["*.ipynb", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]